# atlas

./: .gitignore  README.md
atlas_py/: atlas_camera.py  motor_driver.py  obj_det_test.py  object_detection.py  planner.py  pyproject.toml  serialComms.py  serial_comms.py  serial_comms_test.py  window_show.py
atlas_py/atlas_py/: atlas_camera.py  camera_test.py  hoist.py  hoist_control.py  limit_switches.py  m1_planner.py  m2_planner.py  new_obj_det_test.py  obj_det_test.py  object_detection.py  planner.py  serial_comms.py  test_frame_grabber.py  test_hoist_control.py  test_limit_switches.py  test_object_detect.py  test_object_detection_model.py
atlas_py/atlas_py/scripts/: test_frame_grabber.py
atlas_py/scripts/: hoist_control.py
install/atlas_msgs/share/atlas_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/atlas_msgs/share/atlas_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  atlas_msgsConfig.cmake  atlas_msgs__rosidl_typesupport_cExport-noconfig.cmake  atlas_msgs__rosidl_typesupport_cExport.cmake  atlas_msgs__rosidl_typesupport_cppExport-noconfig.cmake  atlas_msgs__rosidl_typesupport_cppExport.cmake  atlas_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  atlas_msgs__rosidl_typesupport_introspection_cExport.cmake  atlas_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  atlas_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_atlas_msgs__rosidl_generator_cExport-noconfig.cmake  export_atlas_msgs__rosidl_generator_cExport.cmake  export_atlas_msgs__rosidl_generator_cppExport.cmake  export_atlas_msgs__rosidl_generator_pyExport-noconfig.cmake  export_atlas_msgs__rosidl_generator_pyExport.cmake  export_atlas_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_atlas_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_atlas_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_atlas_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/atlas_msgs/share/atlas_msgs/srv/: Detection.idl  Detection_Response.msg  MotionRequest.idl  MotionRequest_Request.msg
(+118 files in other folders)
