[tool.poetry]
name = "atlas-py"
version = "0.1.0"
description = ""
authors = ["Tyson Truong <tystruong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
