[tool.poetry]
name = "atlas-py"
version = "0.1.0"
description = ""
authors = ["Tyson Truong <tystruong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
opencv-python = "^4.10.0.84"
torch = "2.0.1"
torchvision = "0.15.2"
ultralytics = "<8.2.102"
onnx = "^1.16.2"
onnxruntime = "^1.19.2"
rpi-gpio = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
